issues with z-index

--- a/src/scss/components/landing/background/_background.scss
+++ b/src/scss/components/landing/background/_background.scss
@@ -11,6 +11,6 @@
 .background__container {
   position: absolute;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
   overflow: hidden;
 }
